<resources>
    <string name="app_name">ft_hangouts</string>
    <string name="welcome_to_ft_hangouts">Welcome to ft_hangouts</string>
    <string name="logo42">logo42</string>
    <string name="home">Home</string>
    <string name="no_both_changes">You cannot have both - no changes</string>
    <string name="no_changes">No changes</string>
    <string name="its_light">Light it is</string>
    <string name="its_dark">Dark it is</string>
    <string name="time">Last used :</string>
    <string name="info">Details on </string>
    <string name="french">French </string>
    <string name="english">English </string>
    <string name="choose">Choose your language</string>
    <string name="all_contacts">All Contacts</string>
    <string name="create">Contact creation</string>
    <string name="add">add</string>
    <string name="logo42_main">logo42</string>
    <string name="all_contacts_land">All Contacts</string>
    <string name="chat">Chat</string>
    <string name="chat_land">Chat</string>
    <string name="contact_details">Contact Details</string>
    <string name="contact_details_land">Contact Details</string>
    <string name="name_land">Name :</string>
    <string name="name">Name :</string>
    <string name="phone">Phone :</string>
    <string name="address">Address :</string>
    <string name="email">eMail :</string>
    <string name="birthday_date">Birthday date :</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="phone_land">Phone :</string>
    <string name="address_land">Address :</string>
    <string name="email_land">eMail :</string>
    <string name="birthday_date_land">Birthday date :</string>
    <string name="modify_land">Modify</string>
    <string name="delete_land">Delete</string>
    <string name="phone_number">Phone number</string>
    <string name="name_save">Name</string>
    <string name="address_save">Address</string>
    <string name="mail_save">Mail</string>
    <string name="birthday_save">Birthday</string>
    <string name="save">Save</string>
    <string name="name_save_land">Name</string>
    <string name="phone_number_land">Phone number</string>
    <string name="address_save_land">Address</string>
    <string name="mail_save_land">Mail</string>
    <string name="birthday_save_land">Birthday</string>
    <string name="save_land">Save</string>
    <string name="name_mod">Name *</string>
    <string name="phone_number_mod">Phone number *</string>
    <string name="address_mod">Address</string>
    <string name="mail_mod">Mail</string>
    <string name="birthday_mod">Birthday</string>
    <string name="save_mod">Save</string>
    <string name="name_mod_land">Name *</string>
    <string name="phone_number_mod_land">Phone number *</string>
    <string name="address_mod_land">Address</string>
    <string name="mail_mod_land">Mail</string>
    <string name="birthday_mod_land">Birthday</string>
    <string name="save_mod_land">Save</string>
    <string name="header_color">CHOSE THE HEADER\'S COLOR</string>
    <string name="save_header">SAVE</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="header_color_land">CHOSE THE HEADER\'S COLOR</string>
    <string name="save_header_land">SAVE</string>
    <string name="light_land">Light</string>
    <string name="dark_land">Dark</string>
    <string name="message">Type a message</string>
    <string name="settings">settings</string>
    <string name="language">language</string>
    <string name="conv">conv</string>
    <string name="arrow">arrow</string>
</resources>