<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".Modify"
android:background="@drawable/pack1">

<ImageView
    android:id="@+id/appLogo"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="70dp"
    android:src="@drawable/logo"/>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:layout_marginBottom="20dp">

    <EditText
        android:id="@+id/usedName"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@id/appLogo"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edt_background"
        android:hint="@string/name_save"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/usedPhone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/edName"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edt_background"
        android:hint="@string/phone_number"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/usedAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/edName"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edt_background"
        android:hint="@string/address_save"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/usedMail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/edName"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edt_background"
        android:hint="@string/mail_save"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/usedBirth"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/edName"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edt_background"
        android:hint="@string/birthday_save"
        android:paddingLeft="10dp" />

</LinearLayout>

<Button
    android:id="@+id/btnSave"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/edPhone"
    android:text="@string/save"
    android:textSize="20dp"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/btn_shape"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="10dp"/>

</LinearLayout>